# quizgen

./: .gitignore  LICENSE  README.md  convert_questions.py  convert_questions_batch.py  frozen-requirements.txt  generate_embeddings.py  generate_embeddings_batch.py  generate_questions.py  generate_questions_batch.py  import_to_anki.py  pyproject.toml  requirements.txt  thin_out_questions.py
.github/workflows/: main.yml
examples/go/language-specification/questions_csv/: appendix.csv  blocks.csv  built-in-functions.csv  constants.csv  declarations-and-scope.csv  errors.csv  expressions.csv  introduction.csv  lexical-elements.csv  notation.csv  packages.csv  program-initialization-and-execution.csv  properties-of-types-and-values.csv  run-time-panics.csv  source-code-representation.csv  statements.csv  system-considerations.csv  types.csv  variables.csv
examples/go/language-specification/questions_csv_thinned/: thinned_out_questions_256.csv  thinned_out_questions_512.csv
examples/go/language-specification/questions_json/: appendix.json  blocks.json  built-in-functions.json  (+16 more)
examples/gradle/questions_csv_thinned/: thinned_out_questions_1024.csv  thinned_out_questions_256.csv  thinned_out_questions_512.csv
prompts/: concept_extraction.txt  quiz_generation.txt
scripts/: convert_questions.py  generate_embeddings_batch.py
src/quizgen/: quizgen.py
src/quizgen/scripts/: convert_questions.py  convert_questions_batch.py  generate_embeddings.py  generate_embeddings_batch.py  generate_questions.py  generate_questions_batch.py  import_to_anki.py  thin_out_questions.py
(+417 files in other folders)
